# svforge

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data_local/: README.md
docs/: ready-to-use.md
docs/assets/: README.md
src/svforge/: __init__.py  __main__.py  cli.py
src/svforge/core/: __init__.py  bank.py  genome.py  injection_catalogs.py  models.py  provenance.py  regions.py  sampler.py
src/svforge/data/: __init__.py
src/svforge/data/banks/: default_hg38.yaml
src/svforge/data/headers/: __init__.py  delly_somatic_hg38.vcf.template  manta_somatic_hg38.vcf.template
src/svforge/data/injections/: __init__.py  blacklist_hg38_mini.tsv  gnomad_hg38_mini.tsv
src/svforge/io/: __init__.py  vcf_writer.py
src/svforge/validate/: __init__.py  annotate.py  overlap.py  report.py
src/svforge/writers/: __init__.py  _registry.py  base.py  delly.py  manta.py
tests/: conftest.py  test_bank.py  test_chromosome_filter.py  test_cli.py  test_delly_writer.py  test_genome_validation.py  test_header_fidelity.py  test_header_template_override.py  test_indexability.py  test_injection_catalogs.py  test_injection_sampling.py  test_manta_writer.py  test_models.py  test_pair_mode.py  test_paired_output.py  test_provenance.py  test_regions.py  test_sampler.py
tests/fixtures/: bnd_only_hg38.yaml  broken_manta.template  custom_manta.template  mini_bank.yaml  mini_blacklist.bed
